# TRAT

./: .clang-format  .gitignore  CMakeLists-Linux.txt  CMakeLists-Linux_to_Windows.txt  CMakeLists-NativeWindows.txt  README.md  TODO.txt
client/: CMakeLists-Linux.cmake  CMakeLists-Linux.txt  CMakeLists-Linux_to_Windows.txt  CMakeLists-NativeWindows.cmake  CMakeLists-NativeWindows.txt  CMakeLists.txt  CMakePresets.json  TODO.txt  compile_commands.json  mingw-toolchain.cmake  precompiled_headers.cmake
client/cmake/: LinuxLibs.cmake  PrecompiledHeadersConfig.cmake  WindowsLibs.cmake
client/notes/: memory_usage_monitoring.txt
client/rat_compression/: CMakeLists.txt
client/rat_compression/include/rat/: compression.hpp
client/rat_compression/src/: compression.cpp
client/rat_encryption/include/rat/encryption/: encryption.hpp  xor.hpp
client/rat_encryption/src/: main.cpp  xor.cpp
client/rat_handler/: CMakeLists.txt
client/rat_handler/include/rat/: Handler.hpp
client/rat_handler/src/: RatState.cpp  capCurlCache.cpp  downloadXoredFile.cpp  filesystem_handlers.cpp  handleHelpCommand.cpp  handleRunCommand.cpp  handleUpdate.cpp  handleUploadedFiles.cpp  handleXoredPayload.cpp  handlers.cpp  helpers.cpp  init.cpp  networking_handlers.cpp  send.cpp  threaded_handlers.cpp
client/rat_media/: CMakeLists.txt
client/rat_media/include/rat/: media.hpp
client/rat_media/src/: media.cpp  test.cpp
client/rat_networking/: CMakeLists.txt  compile_commands.json
client/rat_networking/include/rat/: networking.hpp
client/rat_networking/src/: Client.cpp  EasyCurlHandler.cpp  helpers.cpp  networker.cpp
client/rat_system/: CMakeLists.txt
client/rat_system/include/rat/: system.hpp
client/rat_system/src/: privilege.cpp  shell.cpp  time.cpp
client/rat_system/src/filesystem/: directory_operations.cpp  file_operations.cpp  navigation.cpp  path_normalization.cpp  queries.cpp
client/rat_system/src/info/: linux_info.cpp  mac_info.cpp  win_info.cpp
client/rat_system/src/rawdogger/: rawdogger.cpp
client/rat_tbot/: CMakeLists.txt
client/rat_tbot/src/: BaseBot.cpp  Bot.cpp  DummyBot.cpp  main.cpp
client/rat_threading/: CMakeLists.txt
client/rat_threading/include/rat/: ThreadPool.hpp
client/rat_threading/src/: ThreadPool.cpp
client/rat_trat/: CMakeLists.txt
client/rat_trat/include/: macro.hpp
client/rat_trat/src/: main.cpp
client/simdjson/: CMakeLists.txt
client/tests/: file_to_header.py  helloworld.c
client/tiny-process-library/: CMakeLists.txt  process.hpp
notes/: memory_usage_monitoring.txt
rat_compression/: CMakeLists.txt
rat_compression/include/rat/: compression.hpp
rat_compression/src/: zlibCompression.cpp
rat_encryption/: CMakeLists.txt
rat_encryption/include/rat/encryption/: xor.hpp
rat_encryption/src/: main.cpp  xor.cpp
rat_handler/: CMakeLists.txt
rat_handler/include/rat/: Handler.hpp
rat_handler/include/rat/handler/: debug.hpp  types.hpp
rat_handler/src/: RatState.cpp  filesystem_handlers.cpp  handleHelpCommand.cpp  handleUpdate.cpp  handleUploadedFiles.cpp  handlers.cpp  helpers.cpp  init.cpp  networking_handlers.cpp  threaded_handlers.cpp
rat_media/: CMakeLists.txt
rat_media/include/rat/: media.hpp
rat_media/src/: media.cpp  test.cpp
rat_networking/: CMakeLists.txt
rat_networking/include/rat/: networking.hpp
rat_networking/include/rat/networking/: debug.hpp  helpers.hpp  types.hpp
rat_networking/src/: Client.cpp  EasyCurlHandler.cpp  helpers.cpp  networker.cpp  networking.cpp
rat_payload/: CMakeLists.txt
rat_payload/include/rat/payload/: PayloadManager.hpp  rawdogger.hpp
rat_payload/src/: PayloadManager.cpp  hello.cpp  rawdogger.cpp  test.cpp
rat_process/: CMakeLists.txt
rat_process/include/rat/: ProcessManager.hpp  process.hpp
rat_process/src/: ProcessManager.cpp  process.cpp
rat_state/: CMakeLists.txt
rat_state/include/rat/: RatState.hpp
rat_state/src/: RatState.cpp  test.cpp
rat_system/: CMakeLists.txt
rat_system/include/rat/: system.hpp
rat_system/include/rat/system/: debug.hpp  types.hpp
rat_system/src/: os-process.cpp  privilege.cpp  process.cpp  shell.cpp  time.cpp
rat_system/src/filesystem/: directory_operations.cpp  file_operations.cpp  navigation.cpp  path_normalization.cpp  queries.cpp
rat_system/src/info/: linux_info.cpp  mac_info.cpp  win_info.cpp
rat_system/src/rawdogger/: rawdogger.cpp
rat_system/src/rawdogger/test/: main.cpp
rat_tbot/: CMakeLists.txt  README.md
rat_tbot/include/rat/tbot/: aliases.hpp  debug.hpp  macros.hpp  tbot.hpp  types.hpp
rat_tbot/src/: BaseBot.cpp  Bot.cpp  main.cpp  tbot.cpp
rat_tbot_handler/: CMakeLists.txt
rat_tbot_handler/src/: handleMediaCommands.cpp  handleUpdate.cpp  handleUpdateCommandParser.cpp
rat_trat/: CMakeLists.txt
rat_trat/include/: macro.hpp  special_handle.hpp
rat_trat/src/: main.cpp  special_handler.cpp
server/: CMakeLists.txt  Scheme.txt  main.cpp  server.kt
server/TelegramBotApiModels/: CMakeLists.txt  TelegramBot.h  TelegramFile.cc  TelegramFile.h  TelegramMessage.cc  TelegramUpdate.cc  TelegramUpdate.h  data.db  model.json  schema.sql
server/cmake/: Windows.cmake  pch.cmake
server/database/: CMakeLists.txt  TelegramBot.cc  TelegramBot.h  TelegramMessage.h  data.db  model.json  schema.sql
server/include/DrogonRatServer/: Handler.hpp  SQLSchemaStatements.hpp  Server.hpp  TelegramBotApiHandler.hpp  debug.hpp
server/include/DrogonRatServer/Handler/: Shell.hpp  TelegramBotApi.hpp  aliases.hpp  inlinedDispatcher.hpp
server/include/rat/: server.hpp
server/include/rat/DrogonServer/: DrogonServer.hpp
server/include/rat/server/: Server.hpp
server/src/: main.cpp
server/src/Handler/: SQLSchemaStatements.hpp  Shell.cpp  TelegramBotApiMethods.cpp  constructor.cpp  constructor.hpp  methods.cpp
server/src/Handler/TelegramBotApiMethods/: handleFileQueryById.cpp  handleGetUpdate.cpp  handleSendDocument.cpp  handleSendDocument.hpp  handleSendMessage.cpp  handleSendMessage.hpp
server/src/Server/: TelergramBotApi.cpp  constructor.cpp  methods.cpp
shell/: CMakeLists.txt  Shell.cpp  Shell.hpp  main.cpp
(+21 files in other folders)
